k8s/base/istio/aerolink-peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: aerolink
spec:
  mtls:
    mode: STRICT
