k8s/base/istio/aerolink-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aerolink-virtualservice
  namespace: aerolink
spec:
  hosts:
  - "*"
  gateways:
  - aerolink-gateway
  http:
  - match:
    - uri:
        prefix: /api/auth
    rewrite:
      uri: /auth
    route:
    - destination:
        host: auth-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/passengers
    rewrite:
      uri: /passengers
    route:
    - destination:
        host: auth-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/flights
    rewrite:
      uri: /flights
    route:
    - destination:
        host: flight-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/bookings
    rewrite:
      uri: /bookings
    route:
    - destination:
        host: booking-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/baggage
    rewrite:
      uri: /baggage
    route:
    - destination:
        host: baggage-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 80
